# Tongue-Diagnosis

./: .gitignore  README.md  pyproject.toml
docs/: smoke-test.md
docs/superpowers/plans/: 2026-05-06-tongue-poc.md  2026-05-07-merge-amanda-resnet50.md
docs/superpowers/specs/: 2026-05-06-tongue-poc-design.md  2026-05-07-merge-amanda-resnet50-design.md
src/: api_server.py
src/ai/: inference.py  registry.py  task_head.py
src/backend/: app.py  models.py  pipeline.py  settings.py
src/backend/llm/: user_message.py
src/backend/routes/: config.py
src/backend/stores/: llm_store.py  prompt_store.py  registry_store.py
src/frontend/: models.py
src/frontend/views/: analyze.py  prompt_editor.py
tests/ai/: test_inference.py  test_registry.py
tests/backend/: test_pipeline.py  test_predictions.py  test_prompt_store.py  test_registry_store.py  test_route_analyze.py  test_route_api_key.py  test_route_config.py  test_user_message.py
tests/frontend/: test_api.py
tongue_webV2-amanda/: app.js  login.html  login.js  main.html  main.js  style.css  workspace.html  交接說明書.txt
